# BilliardGL

./: CMakeLists.txt  README.md
models/: pooltable.mtl
models/room/: EmptyRoom(OBJ).mtl  Room.mtl  room.mtl  room2.mtl  roomShader.fs  roomShader.vs
models/table/: pooltable.fs  pooltable.vs  tableShader.vs
src/: camera.h  main.cpp  main.h  mesh.h  model.h  object.h  shader.h
